# research-hub

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
dashboard/: app.py
dashboard/templates/: _paper_list.html  _stats.html  compare.html  diff.html  graph.html  index.html  paper.html  search_kg.html  timeline.html
data/papers/: 2024-02-05_2402.03300.json  2024-02-05_2402.03300.mindmap.md  2025-03-18_2503.14476.json  2025-03-18_2503.14476.mindmap.md  2025-03-26_2503.20783.json  2025-03-26_2503.20783.mindmap.md  2025-04-08_rl.json  2025-06-19_2506.13585.json  2025-06-19_2506.13585.mindmap.md  2025-07-23_2507.18071.json  2025-07-23_2507.18071.mindmap.md  2025-11-30_2511.20347.json  2025-11-30_2511.20347.mindmap.md  2026-01-08_2601.05242.json  2026-01-08_2601.05242.mindmap.md  2026-02-11_2602.10693.json  2026-02-11_2602.10693.mindmap.md  2026-03-01_search-r1-grpo.json  2026-03-03_untitled.json
models/: paper.py
rag/: engine.py  ingest.py
scripts/: ingest_url.py  init_rag.py
tests/: test_compare.py  test_diff.py  test_ingest_url.py  test_models.py  test_rag.py  test_reading_path.py  test_storage.py  test_timeline.py
utils/: storage.py
